[gd_scene load_steps=8 format=2]

[ext_resource path="res://joc lluita/CollisionShape2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://joc lluita/personatges_escena/personatge2.gd" type="Script" id=2]
[ext_resource path="res://joc lluita/hud/TextureProgress.tscn" type="PackedScene" id=3]
[ext_resource path="res://joc lluita/CollisionShape2D2.tscn" type="PackedScene" id=4]
[ext_resource path="res://joc lluita/sons/so_espasa.tscn" type="PackedScene" id=5]
[ext_resource path="res://joc lluita/sons/mort.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.7489, 27.375 )

[node name="personatge2" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="espera" type="Timer" parent="."]
one_shot = true

[node name="espasa" type="Area2D" parent="."]
rotation = 6.28319

[node name="CollisionShape2D" type="CollisionShape2D" parent="espasa"]
position = Vector2( 35.2653, -3.87008 )
shape = SubResource( 1 )

[node name="TextureProgress" parent="." instance=ExtResource( 3 )]
margin_left = -21.6565
margin_top = -42.2809
margin_right = 278.344
margin_bottom = -2.28089

[node name="CollisionShape2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 0.0343632, -10.0024 )

[node name="CollisionShape2D2" parent="." instance=ExtResource( 4 )]

[node name="so_espasa" parent="." instance=ExtResource( 5 )]

[node name="mort" parent="." instance=ExtResource( 6 )]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="espasa" to="." method="_on_espasa_body_entered"]
