[gd_scene load_steps=6 format=2]

[ext_resource path="res://joc lluita/personatges/samurai.tscn" type="PackedScene" id=1]
[ext_resource path="res://joc lluita/personatges_escena/personatge2.gd" type="Script" id=2]
[ext_resource path="res://joc lluita/hud/TextureProgress.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.0692, 20.9503 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.7489, 29.7489 )

[node name="personatge2" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.607 )
shape = SubResource( 1 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="espera" type="Timer" parent="."]
one_shot = true

[node name="espasa" type="Area2D" parent="."]
rotation = 6.28319

[node name="CollisionShape2D" type="CollisionShape2D" parent="espasa"]
position = Vector2( 32.203, -15.3507 )
shape = SubResource( 2 )

[node name="TextureProgress" parent="." instance=ExtResource( 3 )]

[node name="AnimatedSprite" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -8 )
scale = Vector2( 0.8, 0.8 )
animation = "camina"
frame = 2
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="espasa" to="." method="_on_espasa_body_entered"]
